# tyr-programming-rust

./: .gitignore  Cargo.toml  README.org  rustfmt.toml
httpie/: Cargo.toml
quer/: Cargo.toml
quer/quer/: Cargo.toml
quer/quer-app/src-tauri/: Cargo.toml
quer/quer-app/src-tauri/src/: main.rs
quer/quer-js/: Cargo.toml  README.md  package.json
quer/quer-js/src/: lib.rs
quer/quer-py/: Cargo.toml  README.md
quer/quer-py/src/: lib.rs
quer/quer/examples/: covid.rs
quer/quer/src/: convert.rs
rusteqe/: Cargo.toml
rusteqe/src/: main.rs
thumbors/: Cargo.toml  README.md  build.rs
thumbors/src/: imageproc.rs  main.rs  server1.rs  server2.rs
thumbors/src/engine/: mod.rs  photon.rs
thumbors/src/pb/: abi.rs  mod.rs
